# stc_test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev-compose.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
file_upload/: models.py  pagination.py  serializers.py  urls.py  views.py
file_upload/fixtures/: my_fixture.json
file_upload/migrations/: 0001_initial.py  0002_alter_file_table_fileinfo.py  0003_alter_fileinfo_upload_data.py
file_upload/service/: get_filename.py
nginx/: nginx.conf
stc_test/: asgi.py  settings.py  urls.py  wsgi.py
test/tests/: tests.py
